--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<div id="marco1" style="background: #498F81;"></div><div id="fir1" style="background: url(http://i.imgur.com/ylJZTe7.gif); height: 281px;"><div id="ani1"><div id="ani2" style="color: #498F81">Tyrael</div><a href="http://bellum-drammen.foroac.com/t64-justice-itself-tyrael-id#245" class="hvr-bounce-to-right"><font style="color: #fff">Expediente</font></a><a href="http://bellum-drammen.foroac.com/t279-relations-timeline-tyrael#1910" class="hvr-bounce-to-right"><font style="color: #fff">Relaciones y cronología</font></a><i><font style="color: #fff"><font style="color: #3366ff">Hablo</font> ~ <font style="color: #6D0E0E">Pienso</font> ~ Narro</font></i></div></div><div id="marco1" style="background: #498F81;"></div><style type="text/css">.hvr-bounce-to-right:before {background: #123D34;}</style><link href='https://rawcdn.githack.com/Saidai/CSS/master/firma1.css' rel='stylesheet' type='text/css'><link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+<div id="marco1" style="background: #498F81;"></div>
+<div id="fir1" style="background: url(http://i.imgur.com/ylJZTe7.gif); height: 281px;">
+    <div id="ani1">
+        <div id="ani2" style="color: #498F81">Tyrael</div>
+        <a href="http://bellum-drammen.foroac.com/t64-justice-itself-tyrael-id#245" class="hvr-bounce-to-right">
+            <font style="color: #fff">Expediente</font>
+        </a>
+        <a href="http://bellum-drammen.foroac.com/t279-relations-timeline-tyrael#1910" class="hvr-bounce-to-right">
+            <font style="color: #fff">Relaciones y cronología</font>
+        </a><i><font style="color: #fff"><font style="color: #3366ff">Hablo</font> ~ <font style="color: #6D0E0E">Pienso</font> ~ Narro</font></i></div>
+</div>
+<div id="marco1" style="background: #498F81;"></div>
+<style type="text/css">
+    .hvr-bounce-to-right:before {
+        background: #123D34;
+    }
+</style>
+<link href='css/firma1.css' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
